// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create AppD connector Wizard should render form 1`] = `
<div>
  <div
    class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
  >
    <div
      class="StepWizard---navBarList--2ILN"
    >
      <div
        class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          1
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Connector Details
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          2
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Credentials
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          3
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Verify connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard---stepDetails--Uaxx"
    >
       
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws firstep"
      >
        <div
          class="heading"
        >
          AppDynamics Connector Details
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws connectorForm StyledProps---padding-small--3f0A"
        >
          <div
            class="OverlaySpinner---overlaySpinner--3Bs3"
          >
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <div
                  class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps---font--2ipy StyledProps---main--1Wws main"
                  >
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws connectorFormNameWrapper"
                    >
                      <div
                        class="StyledProps---font--2ipy StyledProps---main--1Wws connectorFormNameElm"
                      >
                        <div
                          class="InputWithIdentifier---txtNameContainer--20iZ"
                        >
                          <div
                            class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                          >
                            <p
                              class="StyledProps---font--2ipy StyledProps---main--1Wws"
                            >
                              ID
                              :
                            </p>
                            <span
                              class="InputWithIdentifier---idInput--w8_T"
                              contenteditable="true"
                            />
                            <span
                              class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                              icon="edit"
                              style="vertical-align: middle;"
                            >
                              <svg
                                data-icon="edit"
                                height="12"
                                viewBox="0 0 16 16"
                                width="12"
                              >
                                <desc>
                                  edit
                                </desc>
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="bp3-form-group"
                            data-id="name-0"
                          >
                            <label
                              class="bp3-label"
                              for="name"
                            >
                              Name
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="name"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Layout---vertical--3Szv Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
                        style="justify-content: center;"
                      >
                        <p
                          class="StyledProps---font--2ipy StyledProps---main--1Wws fieldToggleLabel StyledProps---color--8PuS StyledProps---color-blue500--3HtV"
                        >
                          + Description
                        </p>
                        <p
                          class="StyledProps---font--2ipy StyledProps---main--1Wws fieldToggleLabel StyledProps---color--8PuS StyledProps---color-blue500--3HtV"
                        >
                          + Tags
                        </p>
                      </div>
                    </div>
                    <div
                      class="StyledProps---font--2ipy StyledProps---main--1Wws connectorFormElm"
                    >
                      
                    </div>
                  </div>
                </div>
                <div
                  class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
                >
                  <button
                    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        Save and Continue
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create AppD connector Wizard should render form 2`] = `
<div>
  <div
    class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
  >
    <div
      class="StepWizard---navBarList--2ILN"
    >
      <div
        class="StepWizard---navStep--2trN StepWizard---completedStep--3BLy"
      >
        <span
          class="StepWizard---completedIcon--yi-5"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey200--3A25"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Connector Details
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          2
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Credentials
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          3
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Verify connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard---stepDetails--Uaxx"
    >
       
      <form
        class="FormikForm---main--1N87 connectionForm"
      >
        <div>
          <div
            class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws appDContainer"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0"
            >
              AppDynamics Connection Details
            </p>
            <div
              class="bp3-form-group"
              data-id="url-0"
            >
              <label
                class="bp3-label"
                for="url"
              >
                Url
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="url"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="accountName-1"
            >
              <label
                class="bp3-label"
                for="accountName"
              >
                Account Name
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="accountName"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="username-2"
            >
              <label
                class="bp3-label"
                for="username"
              >
                Username
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="username"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="null-3"
            >
              <label
                class="bp3-label"
              >
                Password
              </label>
              <button
                class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws inputButton"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <div
                    class="Layout---horizontal--3rmQ Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
                    style="align-items: center; width: 100%;"
                  >
                    <span
                      class="bp3-icon StyledProps---main--1Wws"
                      style="height: 12px;"
                    >
                      <svg
                        height="24"
                        width="24"
                      >
                        <g
                          fill="none"
                          stroke="#1C1C28"
                          stroke-width="0.5"
                        >
                          <path
                            d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                          />
                          <path
                            d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                          />
                        </g>
                      </svg>
                    </span>
                    <span>
                      Create or Select a Secret
                    </span>
                  </div>
                </span>
              </button>
            </div>
          </div>
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
          >
            <button
              class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Back
              </span>
            </button>
            <button
              class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Connect and Save
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Create AppD connector Wizard should render form 3`] = `
<div>
  <div
    class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
  >
    <div
      class="StepWizard---navBarList--2ILN"
    >
      <div
        class="StepWizard---navStep--2trN StepWizard---completedStep--3BLy"
      >
        <span
          class="StepWizard---completedIcon--yi-5"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey200--3A25"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Connector Details
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          2
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Credentials
        </p>
      </div>
      <div
        class="StepWizard---navStep--2trN"
      >
        <span
          class="StepWizard---number--1LKy"
        >
          3
        </span>
        <p
          class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Verify connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard---stepDetails--Uaxx"
    >
       
      <form
        class="FormikForm---main--1N87 connectionForm"
      >
        <div>
          <div
            class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws appDContainer"
          >
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0"
            >
              AppDynamics Connection Details
            </p>
            <div
              class="bp3-form-group"
              data-id="url-0"
            >
              <label
                class="bp3-label"
                for="url"
              >
                Url
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="url"
                    type="text"
                    value="dummy url"
                  />
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-intent-danger"
              data-id="accountName-1"
            >
              <label
                class="bp3-label"
                for="accountName"
              >
                Account Name
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group bp3-intent-danger"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="accountName"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="bp3-form-helper-text"
                >
                  accountName is a required field
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-intent-danger"
              data-id="username-2"
            >
              <label
                class="bp3-label"
                for="username"
              >
                Username
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group bp3-intent-danger"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="username"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="bp3-form-helper-text"
                >
                  username is a required field
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="null-3"
            >
              <label
                class="bp3-label"
              >
                Password
              </label>
              <button
                class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws inputButton"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <div
                    class="Layout---horizontal--3rmQ Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
                    style="align-items: center; width: 100%;"
                  >
                    <span
                      class="bp3-icon StyledProps---main--1Wws"
                      style="height: 12px;"
                    >
                      <svg
                        height="24"
                        width="24"
                      >
                        <g
                          fill="none"
                          stroke="#1C1C28"
                          stroke-width="0.5"
                        >
                          <path
                            d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                          />
                          <path
                            d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                          />
                        </g>
                      </svg>
                    </span>
                    <span>
                      Create or Select a Secret
                    </span>
                  </div>
                </span>
              </button>
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---intent-danger--1PFK"
              >
                password is a required field
              </p>
            </div>
          </div>
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
          >
            <button
              class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Back
              </span>
            </button>
            <button
              class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Connect and Save
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
